--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,13 +5,13 @@ authors = ["Eugene The Dream <ek@proximity.dev>"]
 edition = "2018"
 
 [lib]
-crate-type = ["cdylib", "rlib"]
+crate-type = ["cdylib"]
 
 [dependencies]
 near-sdk = "3.1.0"
 near-contract-standards = "3.1.0"
 uint = { version = "0.9.0", default-features = false }
-primitive-types = {version = "0.11.1", default-features = false}
+primitive-types = { version = "0.7.0", default-features = false }
 
 [dev-dependencies]
 near-sdk-sim = "3.2.0"
