--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,10 +2,10 @@
 name = "ft-lockup"
 version = "0.2.0"
 authors = ["Eugene The Dream <ek@proximity.dev>"]
-edition = "2018"
+edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 near-sdk = "3.1.0"
