--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ primitive-types = { version = "0.7.0", default-features = false }
 
 [dev-dependencies]
 near-sdk-sim = "3.2.0"
+serde_json = "1.0.81"
 
 [profile.release]
 codegen-units=1
